<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.redpocket_androidmanage.LoginActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:text="@string/account" />

    <TextView
        android:text="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:layout_marginTop="17dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:textColorLink="?attr/actionMenuTextColor"
        android:maxLines="1"
        android:textSize="20sp"
        tools:ignore="LabelFor" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editText"
        android:textSize="20sp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:inputType="text"
        android:textColorLink="?attr/actionMenuTextColor"
        android:maxLines="1"
        tools:ignore="LabelFor" />

    <Button
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:layout_marginTop="18dp" />
</RelativeLayout>
